--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "predeploy": "yarn build",
     "deploy": "gh-pages -d dist",
     "build": "webpack --mode production",
-    "start": "webpack-dev-server --open --mode development",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server --open --mode development"
   },
   "devDependencies": {
     "@babel/core": "^7.1.6",
